--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "vite": "^4.0.0"
     },
     "dependencies": {
+        "flowbite": "^2.1.1",
         "font-awesome": "^4.7.0",
         "Utils": "^1.0.39"
     }
